--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install:
   - bundle install
 script:
   - bundle exec rspec
+notifications:
+  email: false
+  slack: cs169dev:OPMf1tPzfO3a4gz6gGTOFV7w
